[BACKLOG-40738] JDK17 - Fix all unit tests that aren't related to pentaho-kettle